--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,7 +2,18 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
-@import 'variables';
+@import 'abstracts/variables';
 
-// Bootstrap
+// Vendors
 @import '~bootstrap/scss/bootstrap';
+
+
+// Base
+
+// Layout
+
+// Components
+
+// Pages
+
+// Themes
