Setup 7-1 pattern for sass

--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -2,7 +2,8 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$f-primary: 'Montserrat', sans-serif;
+$f-secondary: 'Share Tech Mono', monospace;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
