--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,15 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
+@import 'abstracts/fonts';
 @import 'abstracts/variables';
 
 // Vendors
-@import '~bootstrap/scss/bootstrap';
+//@import '~bootstrap/scss/bootstrap';
 
 
 // Base
+@import 'base/base';
 
 // Layout
 
