--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,13 +3,16 @@
 // Variables
 @import 'abstracts/fonts';
 @import 'abstracts/variables';
+@import 'abstracts/mixins';
 
 // Vendors
 //@import '~bootstrap/scss/bootstrap';
 
 
 // Base
+@import 'base/reset';
 @import 'base/base';
+@import 'base/typography';
 
 // Layout
 
