Add $c-border for the color of borders

--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -28,8 +28,8 @@ $f-primary: 'Montserrat', sans-serif;
 $f-secondary: 'Share Tech Mono', monospace;
 $c-default: $white;
 $c-accent: $purple;
+$c-border: $indigo;
 $c-bg: $black;
-
 
 $f-base: 1.6rem;
 $f-xs:1.8rem;
