--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -19,17 +19,14 @@ body {
     @include mx-auto;
     width: 90%;
     max-width: 1100px;
-    background-color: rgba(255, 255, 255, 0.4);
+}
 
-    @include for-tablet-portrait-up {
-        background-color: rgba(0, 47, 255, 0.4);
-    }
-
-    @include for-tablet-landscape-up {
-        background-color: rgba(172, 0, 0, 0.4);
-    }
-
-    @include for-desktop-up {
-        background-color: rgba(0, 255, 34, 0.4);
-    }
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
