Update default style of a tag
Add font-weight, text-decoration and hover.

--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -74,4 +74,10 @@ p {
 a {
     color: inherit; /* blue colors for links too */
     font-size: $f-base;
+    font-weight: inherit;
+    text-decoration: none;
+
+    &:hover {
+        color: $c-accent;
+    }
 }
