--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,7 +17,10 @@
 // Layout
 
 // Components
-
+@import 'components/buttons';
+@import 'components/tabs';
+@import 'components/logs';
+@import 'components/avatars';
 // Pages
 
 // Themes
