Add $c-error to store color for errors

--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -30,6 +30,7 @@ $c-default: $white;
 $c-accent: $purple;
 $c-border: $indigo;
 $c-bg: $black;
+$c-error: $orange;
 
 $f-base: 1.6rem;
 $f-xs:1.8rem;
