Import forms and fields in app.scss

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,12 +15,15 @@
 @import 'base/typography';
 
 // Layout
+@import 'layout/forms';
 
 // Components
 @import 'components/buttons';
 @import 'components/tabs';
 @import 'components/logs';
 @import 'components/avatars';
+@import 'components/fields';
+
 // Pages
 
 // Themes
