--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,8 +13,10 @@
 @import 'base/reset';
 @import 'base/base';
 @import 'base/typography';
+@import 'base/animations';
 
 // Layout
+@import 'layout/header';
 @import 'layout/forms';
 
 // Components
