--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -1,9 +1,13 @@
 .btn {
-    height: 60px;
-    padding: 0 30px;
+    padding: 15px 30px;
     font-weight: 500;
     text-align: center;
     text-transform: uppercase;
+    border: 2px solid transparent;
+
+    @include for-tablet-portrait-up {
+        padding: 20px 30px;
+    }
 
     &--primary {
         @include gradient('purple');
@@ -20,10 +24,6 @@
     &:hover {
         color: $c-accent;
         background-color: $white;
+        border: 2px solid $white;
     }
-}
-
-a.btn {
-    display: inline-block;
-    line-height: 60px;
 }
