Import header-section and navbar files on main.scss

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,7 @@
 
 // Layout
 @import 'layout/header';
+@import 'layout/header-section';
 @import 'layout/forms';
 
 // Components
@@ -25,6 +26,7 @@
 @import 'components/logs';
 @import 'components/avatars';
 @import 'components/fields';
+@import 'components/navbar';
 
 // Pages
 
