--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -72,7 +72,7 @@ p {
 
 // Links
 a {
-    color: inherit; /* blue colors for links too */
+    color: inherit;
     font-size: $f-base;
     font-weight: inherit;
     text-decoration: none;
@@ -80,4 +80,8 @@ a {
     &:hover {
         color: $c-accent;
     }
+}
+
+.is-link {
+    text-decoration: underline;
 }
