Change form's padding and style .is-link

--- a/resources/sass/layout/_forms.scss
+++ b/resources/sass/layout/_forms.scss
@@ -1,9 +1,14 @@
 .form {
     display: flex;
     flex-direction: column;
-    padding: 3rem;
+    padding: 3rem 0;
 
     &__footer {
         align-self: flex-end;
+
+        .is-link {
+            font-size: 1.3rem;
+            margin-right: 1.5rem;
+        }
     }
 }
