--- a/resources/sass/components/_fields.scss
+++ b/resources/sass/components/_fields.scss
@@ -51,6 +51,12 @@
     }
 
 
+    .hint {
+        margin: -0.5rem 0 1.5rem;
+        font-size: 0.8em;
+        font-style: italic;
+    }
+
     &.error {
         em {
             margin-top: 1.5rem;
