--- a/resources/sass/components/_logs.scss
+++ b/resources/sass/components/_logs.scss
@@ -1,5 +1,5 @@
 .log {
-
+    position: relative;
     border: 2px solid $c-accent;
     margin: 1.5rem 0;
     padding: 1.5rem;
@@ -59,5 +59,11 @@
                 @include frost('purple');
             }
         }
+    }
+
+    form {
+        position: absolute;
+        right: 1.5rem;
+        font-size: 1.3rem;
     }
 }
