Set max-width and mx to ul in .tabs

--- a/resources/sass/components/_tabs.scss
+++ b/resources/sass/components/_tabs.scss
@@ -4,6 +4,8 @@
     ul {
         display: flex;
         justify-content: space-around;
+        @include mx-auto;
+        max-width: 1100px;
     }
 
     &__item {
