Position edit and follow buttons in profile's header

--- a/resources/sass/layout/_header-section.scss
+++ b/resources/sass/layout/_header-section.scss
@@ -33,6 +33,15 @@
             }
 
         }
+
+        .container {
+            position: relative;
+        }
+        .form-follow ,
+        .btn-edit {
+            position: absolute;
+            right: 0;
+        }
     }
 
     &--timeline {
