Import user-card (component)

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -32,6 +32,8 @@
 @import 'components/actions';
 @import 'components/empty-state';
 @import 'components/timeline-excerpt';
+@import 'components/user-card';
+
 // Pages
 @import 'pages/auth';
 
