--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,6 +21,7 @@
 @import 'layout/forms';
 @import 'layout/timeline';
 @import 'layout/timeline-feed';
+@import 'layout/hero';
 
 // Components
 @import 'components/buttons';
