--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,6 +22,7 @@
 @import 'layout/timeline';
 @import 'layout/timeline-feed';
 @import 'layout/hero';
+@import 'layout/footer';
 
 // Components
 @import 'components/buttons';
